--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -3,23 +3,22 @@
   margin: 0;
   font-family: var(--font-family);
   font-size: 1rem;
-  color: var(--color-black);
-  background: var(--color-white);
-  border: var(--width-border) solid var(--color-gray-2);
+  color: var(--color-text);
+  background: var(--color-background);
+  border: var(--width-border) solid var(--color-background-2);
   border-radius: calc(var(--size-radius) * 0.5);
   outline: none;
   transition: all 0.2s;
 
   &[data-focused] {
     border-color: var(--color-primary-5);
-    box-shadow: 0 0 0 1px var(--color-primary-5);
   }
 
   &[data-disabled] {
-    color: var(--color-gray-6);
+    color: var(--color-background-6);
     pointer-events: none;
     cursor: not-allowed;
-    background-color: var(--color-gray-1);
-    border-color: var(--color-gray-1);
+    background-color: var(--color-background-1);
+    border-color: var(--color-background-1);
   }
 }
