--- a/src/components/CheckboxGroup/CheckboxGroup.module.css
+++ b/src/components/CheckboxGroup/CheckboxGroup.module.css
@@ -3,5 +3,5 @@
   flex-direction: column;
   gap: 0.5rem;
   font-family: var(--font-family);
-  color: var(--color-black);
+  color: var(--color-text);
 }
