--- a/src/components/Tabs/Tabs.module.css
+++ b/src/components/Tabs/Tabs.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   font-family: var(--font-family);
-  color: var(--color-black);
+  color: var(--color-text);
 
   &[data-orientation="vertical"] {
     flex-direction: row;
@@ -24,13 +24,13 @@
 .tab-list {
   display: flex;
   border: none;
-  border-bottom: var(--width-border) solid var(--color-gray-2);
+  border-bottom: var(--width-border) solid var(--color-background-2);
 }
 
 .tab {
   position: relative;
   padding: 0.5rem 1rem;
-  color: var(--color-black);
+  color: var(--color-text);
   cursor: pointer;
   outline: none;
   transition: color 200ms;
@@ -48,7 +48,7 @@
   }
 
   &[data-disabled] {
-    color: var(--color-gray-5);
+    color: var(--color-background-5);
     pointer-events: none;
     cursor: not-allowed;
   }
