--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -21,20 +21,30 @@
   --color-secondary-7: #c0b820;
   --color-secondary-8: #aaa317;
   --color-secondary-9: #928d03;
-  --color-black: #000;
-  --color-gray-0: #f5f5f5;
-  --color-gray-1: #e7e7e7;
-  --color-gray-2: #cdcdcd;
-  --color-gray-3: #b2b2b2;
-  --color-gray-4: #9a9a9a;
-  --color-gray-5: #8b8b8b;
-  --color-gray-6: #848484;
-  --color-gray-7: #717171;
-  --color-gray-8: #656565;
-  --color-gray-9: #575757;
   --color-white: #fff;
-  --color-background: #000;
-  --color-text: #fff;
+  --color-black: #000;
+  --color-text: #000;
+  --color-text-0: #c9c9c9;
+  --color-text-1: #b8b8b8;
+  --color-text-2: #828282;
+  --color-text-3: #696969;
+  --color-text-4: #424242;
+  --color-text-5: #3b3b3b;
+  --color-text-6: #2e2e2e;
+  --color-text-7: #242424;
+  --color-text-8: #1f1f1f;
+  --color-text-9: #141414;
+  --color-background: #fff;
+  --color-background-0: #f8f9fa;
+  --color-background-1: #f1f3f5;
+  --color-background-2: #e9ecef;
+  --color-background-3: #dee2e6;
+  --color-background-4: #ced4da;
+  --color-background-5: #adb5bd;
+  --color-background-6: #868e96;
+  --color-background-7: #495057;
+  --color-background-8: #343a40;
+  --color-background-9: #212529;
   --size-radius: 1rem;
   --width-border: 2px;
   --font-family: sans-serif;
