--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -1,6 +1,6 @@
 .heading {
   font-family: var(--font-family);
-  color: var(--color-text);
+  color: var(--color-secondary);
 }
 
 .heading-level-1 {
