--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,41 +10,20 @@
   --color-primary-7: #005ee5;
   --color-primary-8: #0054ce;
   --color-primary-9: #0048b6;
-  --color-secondary: #d9d02f;
-  --color-secondary-0: #fdfce4;
-  --color-secondary-1: #f8f6d3;
-  --color-secondary-2: #f0ecaa;
-  --color-secondary-3: #e7e17c;
-  --color-secondary-4: #e0d856;
-  --color-secondary-5: #dbd33e;
-  --color-secondary-6: #d9d02f;
-  --color-secondary-7: #c0b820;
-  --color-secondary-8: #aaa317;
-  --color-secondary-9: #928d03;
+  --color-secondary: #000;
+  --color-secondary-0: #f8f9fa;
+  --color-secondary-1: #f1f3f5;
+  --color-secondary-2: #e9ecef;
+  --color-secondary-3: #dee2e6;
+  --color-secondary-4: #ced4da;
+  --color-secondary-5: #adb5bd;
+  --color-secondary-6: #868e96;
+  --color-secondary-7: #495057;
+  --color-secondary-8: #343a40;
+  --color-secondary-9: #212529;
   --color-white: #fff;
   --color-black: #000;
-  --color-text: #000;
-  --color-text-0: #c9c9c9;
-  --color-text-1: #b8b8b8;
-  --color-text-2: #828282;
-  --color-text-3: #696969;
-  --color-text-4: #424242;
-  --color-text-5: #3b3b3b;
-  --color-text-6: #2e2e2e;
-  --color-text-7: #242424;
-  --color-text-8: #1f1f1f;
-  --color-text-9: #141414;
   --color-background: #fff;
-  --color-background-0: #f8f9fa;
-  --color-background-1: #f1f3f5;
-  --color-background-2: #e9ecef;
-  --color-background-3: #dee2e6;
-  --color-background-4: #ced4da;
-  --color-background-5: #adb5bd;
-  --color-background-6: #868e96;
-  --color-background-7: #495057;
-  --color-background-8: #343a40;
-  --color-background-9: #212529;
   --size-radius: 1rem;
   --width-border: 2px;
   --font-family: sans-serif;
