--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,7 +6,7 @@
   margin: 0;
   font-family: var(--font-family);
   font-size: 1rem;
-  color: var(--color-text);
+  color: var(--color-background);
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
