--- a/src/components/Radio/Radio.module.css
+++ b/src/components/Radio/Radio.module.css
@@ -3,7 +3,7 @@
   gap: 0.5rem;
   align-items: center;
   font-family: var(--font-family);
-  color: var(--color-text);
+  color: var(--color-secondary);
   forced-color-adjust: none;
 
   &::before {
