--- a/src/components/Switch/Switch.module.css
+++ b/src/components/Switch/Switch.module.css
@@ -60,16 +60,16 @@
   }
 
   &[data-disabled] {
-    color: var(--color-background-6);
+    color: var(--color-secondary-6);
     pointer-events: none;
     cursor: not-allowed;
 
     .switch-indicator {
-      background: var(--color-background-1);
-      border-color: var(--color-background-1);
+      background: var(--color-secondary-1);
+      border-color: var(--color-secondary-1);
 
       &::before {
-        background: var(--color-background-6);
+        background: var(--color-secondary-6);
       }
     }
   }
