--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   font-family: var(--font-family);
   background-color: var(--color-background);
-  border: 1px solid var(--color-background-2);
+  border: 1px solid var(--color-secondary-2);
   border-radius: calc(var(--size-radius) * 0.5);
   box-shadow: 0 1px 2px rgb(0 0 0 / 30%);
 }
@@ -15,13 +15,14 @@
 
 .card-title {
   font-size: 1.5rem;
+  font-weight: 800;
 }
 
 .card-description {
   padding: 0;
   margin: 0;
-  font-size: 0.7rem;
-  color: var(--color-background-6);
+  font-size: 1rem;
+  color: var(--color-secondary-6);
 }
 
 .card-content {
