--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -68,17 +68,17 @@
   }
 
   &[data-disabled] {
-    color: var(--color-background-6);
+    color: var(--color-secondary-6);
     pointer-events: none;
     cursor: not-allowed;
 
     .slider-track::before {
-      background-color: var(--color-background-1);
+      background-color: var(--color-secondary-1);
     }
 
     .slider-thumb {
-      background-color: var(--color-background-1);
-      border-color: var(--color-background-1);
+      background-color: var(--color-secondary-1);
+      border-color: var(--color-secondary-1);
     }
   }
 }
