--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,5 +1,19 @@
 .select {
   position: relative;
+
+  &[data-disabled] {
+    .label {
+      color: var(--color-secondary-5);
+    }
+
+    button {
+      color: var(--color-secondary-5);
+      cursor: not-allowed;
+      background-color: var(--color-secondary-1);
+      border-color: var(--color-secondary-5);
+      opacity: 0.5;
+    }
+  }
 }
 
 .label {
@@ -8,7 +22,7 @@
   font-family: var(--font-family);
   font-size: 0.875rem;
   font-weight: 500;
-  color: var(--color-primary-5);
+  color: var(--color-primary-9);
 }
 
 .select button {
@@ -21,9 +35,9 @@
   padding: 0.5rem 0.75rem;
   font-family: var(--font-family);
   font-size: 0.875rem;
-  color: var(--color-primary-5);
+  color: var(--color-primary-9);
   background-color: var(--color-background);
-  border: var(--width-border) solid var(--color-primary-5);
+  border: var(--width-border) solid var(--color-primary-9);
   border-radius: calc(var(--size-radius) * 0.5);
   transition: all 0.2s ease;
 
@@ -33,7 +47,6 @@
     justify-content: center;
     width: 1rem;
     height: 1rem;
-    opacity: 0.5;
     transition: transform 0.2s ease;
   }
 
@@ -61,7 +74,7 @@
   margin-top: 0.25rem;
   overflow: hidden;
   background-color: var(--color-background);
-  border: var(--width-border) solid var(--color-primary-5);
+  border: var(--width-border) solid var(--color-primary-9);
   border-radius: calc(var(--size-radius) * 0.5);
   box-shadow:
     0 4px 6px -1px rgb(0 0 0 / 10%),
@@ -80,7 +93,7 @@
   padding: 0.5rem 0.75rem;
   font-family: var(--font-family);
   font-size: 0.875rem;
-  color: var(--color-primary-5);
+  color: var(--color-primary-9);
   cursor: pointer;
   user-select: none;
   border-radius: calc(var(--size-radius) * 0.25);
@@ -92,10 +105,5 @@
   &[data-selected] {
     font-weight: 500;
     background-color: var(--color-primary-2);
-  }
-
-  &[data-disabled] {
-    cursor: not-allowed;
-    opacity: 0.5;
   }
 }
