--- a/src/components/Accordion/Accordion.module.css
+++ b/src/components/Accordion/Accordion.module.css
@@ -4,7 +4,7 @@
 
 .accordion-item {
   margin-bottom: 0.25rem;
-  border: var(--width-border) solid var(--color-primary-5);
+  border: var(--width-border) solid var(--color-primary-9);
   border-radius: calc(var(--size-radius) * 0.5);
 }
 
@@ -17,7 +17,7 @@
   font-family: var(--font-family);
   font-size: 1rem;
   font-weight: 800;
-  color: var(--color-primary-5);
+  color: var(--color-primary-9);
   text-align: left;
   cursor: pointer;
   background: none;
@@ -50,6 +50,7 @@
   overflow: hidden;
   font-family: var(--font-family);
   font-size: 1rem;
+  color: var(--color-secondary-9);
   transition: all 0.2s ease;
 
   &[aria-hidden="false"] {
