style: improve components color

--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -22,7 +22,7 @@
   font-family: var(--font-family);
   font-size: 0.875rem;
   font-weight: 500;
-  color: var(--color-primary-9);
+  color: var(--color-secondary-9);
 }
 
 .select button {
@@ -35,9 +35,9 @@
   padding: 0.5rem 0.75rem;
   font-family: var(--font-family);
   font-size: 0.875rem;
-  color: var(--color-primary-9);
+  color: var(--color-secondary-9);
   background-color: var(--color-background);
-  border: var(--width-border) solid var(--color-primary-9);
+  border: var(--width-border) solid var(--color-secondary-9);
   border-radius: calc(var(--size-radius) * 0.5);
   transition: all 0.2s ease;
 
@@ -52,12 +52,12 @@
 
   &:hover {
     cursor: pointer;
-    background-color: var(--color-primary-0);
+    background-color: var(--color-secondary-0);
   }
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 2px var(--color-primary-2);
+    box-shadow: 0 0 0 2px var(--color-secondary-2);
   }
 
   &[data-open] {
@@ -74,7 +74,7 @@
   margin-top: 0.25rem;
   overflow: hidden;
   background-color: var(--color-background);
-  border: var(--width-border) solid var(--color-primary-9);
+  border: var(--width-border) solid var(--color-secondary-9);
   border-radius: calc(var(--size-radius) * 0.5);
   box-shadow:
     0 4px 6px -1px rgb(0 0 0 / 10%),
@@ -93,17 +93,18 @@
   padding: 0.5rem 0.75rem;
   font-family: var(--font-family);
   font-size: 0.875rem;
-  color: var(--color-primary-9);
+  color: var(--color-secondary-9);
   cursor: pointer;
   user-select: none;
   border-radius: calc(var(--size-radius) * 0.25);
 
   &:hover {
-    background-color: var(--color-primary-1);
+    background-color: var(--color-secondary-1);
   }
 
   &[data-selected] {
     font-weight: 500;
-    background-color: var(--color-primary-2);
+    color: var(--color-background);
+    background-color: var(--color-primary-9);
   }
 }
