--- a/src/components/List/List.module.css
+++ b/src/components/List/List.module.css
@@ -1,7 +1,7 @@
 .list {
   padding-left: 1.5rem;
-  margin-bottom: 1.5rem;
   font-family: var(--font-family);
+  color: var(--color-secondary-9);
 }
 
 .orderedList {
@@ -13,6 +13,5 @@
 }
 
 .listItem {
-  margin-bottom: 0.5rem;
   line-height: 1.5;
 }
