--- a/packages/components/box/src/index.css
+++ b/packages/components/box/src/index.css
@@ -1,4 +1,4 @@
-.box {
+.ginga-box {
   font-family: var(--font-family);
   color: var(--color-primary-9);
   background-color: var(--color-background);
