--- a/packages/components/form-control/src/index.css
+++ b/packages/components/form-control/src/index.css
@@ -1,17 +1,17 @@
-.form-control {
+.ginga-form-control {
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
 }
 
-.form-control-label {
+.ginga-form-control-label {
   margin-bottom: 0.5rem;
   font-family: var(--font-family);
   font-weight: bold;
   color: var(--color-primary);
 }
 
-.form-control-inner {
+.ginga-form-control-inner {
   display: flex;
   flex-direction: column;
 }
