--- a/examples/next-template/src/app/_components/ArticleCard.module.css
+++ b/examples/next-template/src/app/_components/ArticleCard.module.css
@@ -1,24 +1,24 @@
-.root {
+.ginga-root {
   display: flex;
-  gap: 1rem;
   flex-direction: row;
+  gap: 1rem;
+  height: 200px;
   padding: 1rem;
   background-color: var(--color-background);
   border: var(--width-border) solid var(--color-primary-9);
   border-radius: var(--size-radius);
-  height: 200px;
 }
 
-.text-area {
+.ginga-text-area {
   width: 70%;
   overflow: hidden;
 }
 
-.image-area {
+.ginga-image-area {
   width: 30%;
 }
 
-.image {
+.ginga-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
